added some data exploration

--- a/main_.ipynb
+++ b/main_.ipynb
@@ -569,16 +569,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"\\nExtract lenght of the shark out of the column Species (3m, 4 m, 6')\\nshark attacks by area in order to locate the most dangerous ones\\nwhic is the most activity where there are shark attacks\\n\\nWhich shark species are most dangerous? -> find the shark by injury, classify species by level od injury. (barplot of type of injuryes and hue of species)\\n\\n\""
+       "\"\\nExtract lenght of the shark out of the column Species (3m, 4 m, 6')\\nshark attacks by area in order to locate the most dangerous ones\\nwhic is the activity where there were most shark attacks\\n\\nWhich shark species are most dangerous? -> find the shark by injury, classify species by level od injury. (barplot of type of injuryes and hue of species)\\nEvolution of shark attack through years\\n\\n\""
       ]
      },
-     "execution_count": 63,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,9 +587,11 @@
     "\"\"\"\n",
     "Extract lenght of the shark out of the column Species (3m, 4 m, 6')\n",
     "shark attacks by area in order to locate the most dangerous ones\n",
-    "whic is the most activity where there are shark attacks\n",
     "\n",
-    "Which shark species are most dangerous? -> find the shark by injury, classify species by level od injury. (barplot of type of injuryes and hue of species)\n",
+    "Which shark species are most dangerous? -> find the shark by injury, classify species by level of injury. (barplot of type of injuryes and hue of species)\n",
+    "Evolution of shark attacks through years.\n",
+    "When are the sharks more active? Morning, afternoon, night?...\n",
+    "Which is the most common activity where there were most shark attacks.\n",
     "\n",
     "\"\"\""
    ]
