--- a/main_.ipynb
+++ b/main_.ipynb
@@ -568,32 +568,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 66,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\nExtract lenght of the shark out of the column Species (3m, 4 m, 6')\\nshark attacks by area in order to locate the most dangerous ones\\nwhic is the activity where there were most shark attacks\\n\\nWhich shark species are most dangerous? -> find the shark by injury, classify species by level od injury. (barplot of type of injuryes and hue of species)\\nEvolution of shark attack through years\\n\\n\""
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "\"\"\"\n",
     "Extract lenght of the shark out of the column Species (3m, 4 m, 6')\n",
     "shark attacks by area in order to locate the most dangerous ones\n",
     "\n",
-    "Which shark species are most dangerous? -> find the shark by injury, classify species by level of injury. (barplot of type of injuryes and hue of species)\n",
+    "Which shark species are most dangerous? -> find the shark by injury, classify species by level of injury. (barplot of type of injuries (fatal) and hue of species)\n",
+    "\n",
     "Evolution of shark attacks through years.\n",
-    "When are the sharks more active? Morning, afternoon, night?...\n",
+    "\n",
+    "NO - When are the sharks more active? Morning, afternoon, night?... (NO SE PUEDE, LA MITAD DE LA DATA ES UNKNOWN)\n",
+    "\n",
     "Which is the most common activity where there were most shark attacks.\n",
     "\n",
-    "\"\"\""
+    "Dispersion of attacks through ages.\n",
+    "\n",
+    "In which country are more attacks of sharks.\n",
+    "\n",
+    "Which is the most common type of shark attack by country.\n",
+    "\n"
    ]
   }
  ],
