fixed bug in cleaning time function

--- a/main_.ipynb
+++ b/main_.ipynb
@@ -587,6 +587,8 @@
     "In which country are more attacks of sharks.\n",
     "\n",
     "Which is the most common type of shark attack by country.\n",
+    "\n",
+    "Men are most likely to provoke a shark attack.\n",
     "\n"
    ]
   }
