finished cleaning and started visualization

--- a/main_.ipynb
+++ b/main_.ipynb
@@ -576,19 +576,19 @@
     "\n",
     "Which shark species are most dangerous? -> find the shark by injury, classify species by level of injury. (barplot of type of injuries (fatal) and hue of species)\n",
     "\n",
-    "Evolution of shark attacks through years.\n",
+    "YES - Evolution of shark attacks through years.\n",
     "\n",
     "NO - When are the sharks more active? Morning, afternoon, night?... (NO SE PUEDE, LA MITAD DE LA DATA ES UNKNOWN)\n",
     "\n",
-    "Which is the most common activity where there were most shark attacks.\n",
+    "YES - Which is the most common activity where there were most shark attacks.\n",
     "\n",
-    "Dispersion of attacks through ages.\n",
+    "YES - Dispersion of attacks through ages/sex. (dumbness of young people)\n",
     "\n",
-    "In which country are more attacks of sharks.\n",
+    "NO - In which country are more attacks of sharks.\n",
     "\n",
-    "Which is the most common type of shark attack by country.\n",
+    "NO - Which is the most common type of shark attack by country.\n",
     "\n",
-    "Men are most likely to provoke a shark attack.\n",
+    "YES - Men are most likely to provoke a shark attack.\n",
     "\n"
    ]
   }
