got 4 visualizations, 1 more and argue the analysis

--- a/main_.ipynb
+++ b/main_.ipynb
@@ -578,7 +578,7 @@
     "\n",
     "YES - Evolution of shark attacks through years.\n",
     "\n",
-    "NO - When are the sharks more active? Morning, afternoon, night?... (NO SE PUEDE, LA MITAD DE LA DATA ES UNKNOWN)\n",
+    "YES - When are the sharks more active? Morning, afternoon, night?... (NO SE PUEDE, LA MITAD DE LA DATA ES UNKNOWN)\n",
     "\n",
     "YES - Which is the most common activity where there were most shark attacks.\n",
     "\n",
